# promptcraft-library

./: .env.bak  .env.example  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  crud.py  db.py  main.py  models.py  schemas.py
app/embeddings/: providers.py
app/providers/: openrouter_openai.py
migrations/: 000_init.sql
scripts/: embedding_benchmark.py
tests/: test_api.py
