[tool.poetry]
name = "llm-workflow-mvp"
version = "0.1.0"
description = "LLM Workflow Copilot — MVP"
authors = ["Harshit Singhania <you@example.com>"]
readme = "README.md"
packages = [
  { include = "app" }
]


[tool.poetry.dependencies]
python = ">=3.10, <4.0"
fastapi = "^0.121.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
sqlalchemy = "^2.0.23"
alembic = "^1.13.0"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.0"
pydantic = "^2.0.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.5.0"}
httpx = "^0.25.0"
jinja2 = "^3.1.2"
openai = "^1.42.0"
pinecone-client = "^3.2.0"
boto3 = "^1.34.0"
pydantic-settings = "^2.11.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^24.10.0"
isort = "^5.13.0"
mypy = "^1.8.0"


[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"